--- a/user_privacy.html
+++ b/user_privacy.html
@@ -55,7 +55,9 @@
             <div id="mailContentContainer" class="qmbox qm_con_body_content qqmail_webmail_only" style="">
                 <div>
                     <div style="text-align: center; font-size: 20px;"><strong>隐私政策</strong></div>
-                    <div class="STYLE4" style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: medium;">隐私政策尊重并保护所有使用隐私政策网络服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，我们的隐私政策涵盖我们收集，使用，披露，传输和存储您的信息的方式。但隐私政策将以高度的勤勉、审慎义务对待这些信息。隐私政策会不时更新本隐私权政策。 您在同意隐私政策络服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于隐私政策络服务使用协议不可分割的一部分。你不是一定要提供我们要求的个人信息，但在许多情况下，如果你选择不提供，我们将无法为你提供我们的产品或服务，也无法回应你遇到的任何问题。 <br>如果您对本隐私政策中描述的数据处理实践有任何疑问，请
+                    <div class="STYLE4" style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: medium;">
+                        主体:熊猫天气<br>
+                        隐私政策尊重并保护所有使用隐私政策网络服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，我们的隐私政策涵盖我们收集，使用，披露，传输和存储您的信息的方式。但隐私政策将以高度的勤勉、审慎义务对待这些信息。隐私政策会不时更新本隐私权政策。 您在同意隐私政策络服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于隐私政策络服务使用协议不可分割的一部分。你不是一定要提供我们要求的个人信息，但在许多情况下，如果你选择不提供，我们将无法为你提供我们的产品或服务，也无法回应你遇到的任何问题。 <br>如果您对本隐私政策中描述的数据处理实践有任何疑问，请
                         联系我们，以便我们处理您的特殊需求。我们很高兴收到您的反馈。 <br><br><strong>一、我们如何收集信息</strong><br>我们根据合法、正当、必要的原则，仅收集实现产品功能所必要的信息。我们公司收集个人信息的主要来源有：您提供的信息、在您使用我们产品或服务过程中获取的信息、第三方分享的您的信息。我们会出于如下产品功能的目的，收集和使用您的个人信息，如您不提供相关信息或不同意我们收集相关信息，您可能无法正常享受我们提供的某些服务，或无法达到好的服务效果。 <br>
                         <div class="titlePage" style="font-size: 18px;">1. 在您开启设备定位功能并使用熊猫天气提供的基于位置的天气服务时，我们需要收集您的设备信息、位置信息、网络身份标识信息。我们会使用各种方式进行定位，包括通过 IP 地址、GPS 以及能够提供相关信息的其他传感器等（比如说可能会为熊猫天气提供附近设备、Wi-Fi 接入点和基站的信息）。可以通过系统授权关闭定位服务或系统权限，停止和风天气对您的位置信息的收集，但您可能将无法获得相关服务或功能，或者无法达到相关服务拟达到的效果。
                         <br>
